fix:show private room bugs
